add: app migrated to signals

--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -26,7 +26,7 @@
         id="expected-return"
         name="expected-return"
         type="number"
-        [(ngModel)]="enteredExepctedReturn"
+        [(ngModel)]="enteredExpectedReturn"
       />
     </p>
     <p>
